[gd_scene load_steps=9 format=2]

[ext_resource path="res://shared/fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://shared/fonts/Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/ui/ScoreSubmitter.gd" type="Script" id=3]
[ext_resource path="res://shared/gui_leaderboard/leaderboard_entry_large.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=4]
size = 120
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 90
font_data = ExtResource( 2 )

[node name="ScoreSubmitter" type="Control"]
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 110.0
margin_right = 1980.0
margin_bottom = 334.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 436.0
margin_top = 15.0
margin_right = 1543.0
margin_bottom = 209.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 1107.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 4 )
text = "CONGRATULATIONS"
align = 1
valign = 1

[node name="Message" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 146.0
margin_right = 1107.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 5 )
text = "Your Score of x qualifies you for y place!"
align = 1

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.831373 )
margin_left = 537.0
margin_top = 460.0
margin_right = 1416.0
margin_bottom = 842.0

[node name="Entry1" type="Node2D" parent="."]
position = Vector2( 511, 480 )

[node name="Entry" parent="Entry1" instance=ExtResource( 4 )]

[node name="Entry2" type="Node2D" parent="."]
position = Vector2( 511, 610 )

[node name="Entry" parent="Entry2" instance=ExtResource( 4 )]

[node name="Entry3" type="Node2D" parent="."]
position = Vector2( 511, 740 )

[node name="Entry" parent="Entry3" instance=ExtResource( 4 )]

[node name="EntryBox" type="Node2D" parent="."]
position = Vector2( 615, 480 )

[node name="LineEdit" type="LineEdit" parent="EntryBox"]
margin_right = 494.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 6 )
max_length = 13
placeholder_text = "Enter Name"

[node name="SubmitButton" type="Button" parent="."]
margin_left = 635.0
margin_top = 868.0
margin_right = 1285.0
margin_bottom = 990.0
custom_fonts/font = SubResource( 7 )
text = "Submit"

[connection signal="button_up" from="SubmitButton" to="." method="_on_SubmitButton_button_up"]
